@@ -377,10 +377,10 @@ Installing Ant / Optional Tasks</a> section above.</p>
     <td><a href="http://www.judoscript.com/index.html" target="_top">www.judoscript.com/index.html</a></td>
   </tr>
   <tr>
-    <td>netcomponents.jar</td>
+    <td>commons-net.jar</td>
     <td>ftp and telnet tasks</td>
-    <td><a href="http://www.savarese.org/oro/downloads/index.html#NetComponents"
-           target="_top">www.savarese.org/oro/downloads</a></td>
+    <td><a href="http://jakarta.apache.org/commons/net/index.html"
+           target="_top">http://jakarta.apache.org/commons/net/index.html</a></td>
   </tr>
   <tr>
     <td>bcel.jar</td>
